Bug 1161815: Use a single ID2D1SolidColorBrush per DrawTarget. r=jrmuizel